--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,40 +6,49 @@
 #    By: mmurakam <mmurakam@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/01/25 12:43:19 by mmurakam          #+#    #+#              #
-#    Updated: 2020/05/09 23:51:43 by mmurakam         ###   ########.fr        #
+#    Updated: 2020/05/16 17:07:03 by mmurakam         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 
-SCRIPT = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+SRC_DIR = ./src
+OBJ_DIR = ./obj
+HEADER_DIR = ./includes/
+BONUS_DIR = ./bonus
 
-SCRIPTOBJ = ft_memset.o ft_bzero.o ft_memcpy.o ft_memccpy.o ft_memmove.o ft_memchr.o ft_memcmp.o ft_strlen.o ft_strlcpy.o ft_strlcat.o ft_strchr.o ft_strrchr.o ft_strnstr.o ft_strncmp.o ft_atoi.o ft_isalpha.o ft_isdigit.o ft_isalnum.o ft_isascii.o ft_isprint.o ft_toupper.o ft_tolower.o ft_calloc.o ft_strdup.o ft_substr.o ft_strjoin.o ft_strtrim.o ft_split.o ft_itoa.o ft_strmapi.o ft_putchar_fd.o ft_putstr_fd.o ft_putendl_fd.o ft_putnbr_fd.o
+HEADER := $(wildcard $(HEADER_DIR)*.h)
+SRC := $(wildcard $(SRC_DIR)/*.c)
+OBJ := $(patsubst $(SRC_DIR)/%.c,$(OBJ_DIR)/%.o,$(SRC))
 
-SCRIPTBONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+BONUS_SRC = $(wildcard $(BONUS_DIR)/*.c)
+BONUS_OBJ = $(patsubst $(BONUS_DIR)/%.c,$(OBJ_DIR)/%.o,$(BONUS_SRC))
 
-SCRIPTBONUSOBJ = ft_lstnew.o ft_lstadd_front.o ft_lstsize.o ft_lstlast.o ft_lstadd_back.o ft_lstdelone.o ft_lstclear.o ft_lstiter.o ft_lstmap.o
+CC = gcc
 
 FLAGS = -Wall -Wextra -Werror
 
 all:$(NAME)
 
-$(NAME):	$(SCRIPT) libft.h
-	gcc $(FLAGS) -I./ -c $(SCRIPT)
-	ar rc $(NAME) $(SCRIPTOBJ)
+$(NAME): $(OBJ)
+	ar rcs $@ $^
 	ranlib $(NAME)
 
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(HEADER)
+	@mkdir -p ${OBJ_DIR}
+	$(CC) $(FLAGS) -I $(HEADER_DIR) -c $< -o $@
+
 clean:
-	rm -f $(SCRIPTOBJ) $(SCRIPTBONUSOBJ)
+	rm -rf $(OBJ) $(OBJ_DIR)
 
 fclean:
-	rm -f $(SCRIPTOBJ) $(SCRIPTBONUSOBJ) $(NAME)
+	rm -rf $(OBJ) $(OBJ_DIR) $(NAME)
 
 re:	fclean all
 
-bonus:	$(SCRIPTBONUS) libft.h
-	gcc $(FLAGS) -I./ -c $(SCRIPTBONUS)
-	ar rc $(NAME) $(SCRIPTBONUSOBJ)
+bonus:	$(OBJ_DIR)/%.o: $(BONUS_DIR)/%.c $(HEADER)
+	$(CC) $(FLAGS) -I $(HEADER_DIR) -c $< -o $@
+	ar rc $(NAME) $(BONUS_OBJ)
 	ranlib $(NAME)
 
 norm:	norminette *.[ch]
